# Sonetto-rust

./: .gitignore  Cargo.toml  PHASE5_REPORT.md  README.md  README_UI_LOCAL.md  README_WASM_BUILD.md  package.json
.github/workflows/: build-wasm.yml  deploy-cloudflare-pages.yml  depth1_bench.yml
Egaroucid-engine/src/console/: gtp_command.hpp
Egaroucid-engine/src/engine/: level.hpp
crates/sonetto_core/: Cargo.toml
crates/sonetto_core/examples/: nps_compare.rs
crates/sonetto_core/src/: apply.rs  backend.rs  board.rs  coord.rs  derivative.rs  egev2.rs  eval.rs  eval_egev2.rs  flips.rs  lib.rs  movegen.rs  score.rs  search.rs  stability.rs  tt.rs  zobrist.rs
crates/sonetto_core/src/features/: occ.rs  swap.rs  update.rs
crates/sonetto_core/src/sensei_ab/: alpha_beta.rs  depth_one.rs  hash_map.rs  last_moves.rs  mod.rs  move_iter.rs
crates/sonetto_core/src/sensei_extras/: endgame_time.rs  mod.rs  move_selector.rs  win_probability.rs
crates/sonetto_core/test/: derivative_backend_switch.rs  derivative_bounds_monotonic.rs  movegen.rs  sensei_ab_legal.rs  sensei_ab_regression.rs  sensei_extras_move_selector.rs  sensei_extras_win_probability.rs
crates/sonetto_core/testdata/: sensei_ab_regression.txt
crates/sonetto_trainer/: Cargo.toml
crates/sonetto_trainer/src/: cli.rs  config.rs  export_zip.rs  log.rs  main.rs  teacher.rs  util.rs
crates/sonetto_trainer/src/datasets/: mod.rs  training.rs  transcript.rs
crates/sonetto_wasm/: Cargo.toml
crates/sonetto_wasm/src/: lib.rs
docs/sensei_port/: gap_analysis.md
examples/: sensei_ab_bench.rs
scripts/: build_pages_zip.sh  build_wasm_dual.sh  build_wasm_threads_dual.sh  cargo_with_toolchain.sh  localize_ui.mjs  match.py  patch_rayon_worker_imports.py  self_check_pages.mjs  wasm_opt_dir.sh
sensei-engine/gtp_depth1/: CMakeLists.txt  sensei_depth1_gtp_main.cpp
web/: Sonetto.html  _headers  egbk3_book.js  engine_worker.js  index.html  manifest.webmanifest  package-lock.json  package.json  service-worker.js  sonetto_assets.json  tailwind.config.cjs  zip_local.js
web/pkg/: README.txt  sonetto_wasm.js
web/pkg_simd/: README.md  sonetto_wasm.js
web/pkg_threads/: README.txt  sonetto_wasm.js
web/pkg_threads_simd/: README.md  sonetto_wasm.js
